# Wifi-Coursework

./: CMakeLists.txt  README.md  cracked.json  sdkconfig
main/: CMakeLists.txt  gzip_assets.py  main.c  makeGZIP.sh  onewire_example_main.c  thermostat.c  webserver.c
main/data/: page.html  page.template.html  script.js  style.css
main/include/: thermostat.h  webserver.h
wifi_rgb/: CMakeLists.txt
wifi_rgb/main/: CMakeLists.txt  color_storage.c  gzip_assets.py  main.c  rgb_led.c  webserver.c
wifi_rgb/main/data/: page.html  page.template.html  script.js  style.css
wifi_rgb/main/include/: color_storage.h  webserver.h
